preparing for rendering selections

--- a/spago.yaml
+++ b/spago.yaml
@@ -20,6 +20,8 @@ package:
     - profunctor-lenses
     - random
     - record
+    - spec
+    - spec-node
     - transformers
     - variant
   test:
