--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ce-editor",
   "scripts": {
     "build.spago": "spago build",
-    "build": "spago bundle --bundle-type app --module Ui.App --outfile ./docs/main.js",
+    "build:App0": "spago bundle --bundle-type app --module Ui.App0.Main --outfile ./docs/App0/main.js",
+    "build:App1": "spago bundle --bundle-type app --module Ui.App1.Main --outfile ./docs/App1/main.js",
     "serve": "http-server docs/",
     "start": "bun run build && bun run serve"
   },
