added purescript-language-server as devDependency

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "bun run build && bun run serve"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "purescript-language-server": "^0.18.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
