--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "ce-editor",
   "scripts": {
     "build.spago": "spago build",
-    "build.App0": "spago bundle --bundle-type app --module Ui.App0.Main --outfile ./docs/App0/main.js",
-    "build.App1": "spago bundle --bundle-type app --module Ui.App1.Main --outfile ./docs/App1/main.js",
-    "build": "bun run build.App1",
+    "build": "spago bundle --bundle-type app --module Ui.Main --outfile ./docs/main.js",
     "test": "bun spago test",
     "serve": "http-server docs/",
     "start": "bun run build && bun run serve"
