--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "scripts": {
     "build.spago": "spago build",
     "build": "spago bundle --bundle-type app --module Ui.Main --outfile ./docs/main.js",
-    "test": "bun spago test",
+    "test": "spago test",
     "serve": "http-server docs/",
-    "start": "bun run build && bun run serve"
+    "start": "spago bundle --bundle-type app --module Ui.Main --outfile ./docs/main.js && http-server docs"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -18,5 +18,6 @@
     "http-server": "^14.1.1",
     "purescript": "^0.15.16-4",
     "spago": "^0.93.43"
-  }
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
